<resources>
    <string name="app_name">Forum Luthfi</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="email_required">Email is required</string>
    <string name="email_not_valid">E-Mail is not valid</string>
    <string name="password_required">Password is required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="back_to_login">Back to login</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_required">Full name is required</string>
    <string name="full_name_must_longer">Full name must be longer</string>
    <string name="loading">Loading..</string>
    <string name="please_wait">Please wait...</string>
    <string name="cannot_connect_server">Cannot connect to server</string>
    <string name="get_thread_data">Get Thread Data</string>
    <string name="title">Title</string>
    <string name="title_required">Title is required</string>
    <string name="content_required">Content is required</string>
    <string name="user">User</string>
    <string name="reply_here">Reply Here</string>
    <string name="reply">Reply</string>
    <string name="comment">Comment</string>
    <string name="add_your_comment">Add your comment</string>
    <string name="comment_required">Comment is required</string>
</resources>
