<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/logo_forumnet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:padding="10dp"
                android:textAlignment="center" />

        </LinearLayout>
        <LinearLayout
            android:background="@drawable/rectangle_gradient"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_rectangle_white"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="30dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtFullname"
                android:drawableRight="@drawable/ic_person_outline_e9e9e9_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtUsername"
                android:drawableRight="@drawable/ic_person_outline_e9e9e9_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtPassword"
                android:drawableRight="@drawable/ic_lock_open_e9e9e9_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnsubmit"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorfafafa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnSubmitClicked"
            android:text="@string/submit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/back_to_login"
                android:onClick="btnBacktologinClicked"
                android:layout_weight="1" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>